no qc pass: unnamed
no qc pass: unnamed
qc pass: p4lang demultiplexer
qc pass: p4lang downlink
---------------------------------- 2022-03-03 06:49:36
todo: quic
todo: bgp flowspec v2
todo: tcp window scale
---------------------------------- 2022-03-03 08:07:30
todo: update gtp stack to the latest standards, add to dataplanes
---------------------------------- 2022-03-03 11:37:03
qc pass: ipv4 over gtp
qc pass: ipv6 over gtp
qc pass: ipv4 and ipv6 over gtp
---------------------------------- 2022-03-03 11:46:08
no qc pass: ipv4 and ipv6 over gtp
no qc pass: ipv6 over gtp
qc pass: unnamed
qc pass: unnamed
---------------------------------- 2022-03-03 11:54:43
no qc pass: unnamed
no qc pass: unnamed
qc pass: ipv6 over gtp
qc pass: ipv4 and ipv6 over gtp
---------------------------------- 2022-03-03 12:31:33
qc pass: gtp tunnel
---------------------------------- 2022-03-03 17:30:24
qc pass: p4lang: ingress gtp access list
qc pass: p4lang: egress gtp access list
qc pass: p4lang: gtp server over ipv4
qc pass: p4lang: gtp server over ipv6
qc pass: p4lang: gtp server over ipv4 loopback
qc pass: p4lang: gtp server over ipv6 loopback
---------------------------------- 2022-03-07 06:41:13
no todo: update gtp stack to the latest standards, add to dataplanes
todo: update gtp stack to the latest standards
---------------------------------- 2022-03-08 16:56:26
qc pass: sdwan over ipv4
qc pass: sdwan over ipv6
---------------------------------- 2022-03-10 06:14:25
qc pass: sdwan with fixed addresses
qc pass: sdwan hub and spoke
---------------------------------- 2022-03-11 07:56:22
no todo: tcp window scale
---------------------------------- 2022-03-11 09:59:39
qc pass: secondary dns server
qc pass: sdwan with mixed addresses
---------------------------------- 2022-03-21 22:08:40
no qc pass: ppp address propagation
failed: ppp address propagation
---------------------------------- 2022-03-21 22:44:12
no failed: ppp address propagation
qc pass: ppp address propagation