@@ -43,7 +43,7 @@ public class verCore {
     /**
      * compile day
      */
-    public final static int day = 21;
+    public final static int day = 22;
 
     /**
      * statement of release
