@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v22.3.21-cur, done by cs@nop.
--;-;-;2022-03-21 23:26:33, took 00:07:15, with 100 workers, on 2780 cases, 0 failed, 1 traces, 4 retries
+-;-;-;freeRouter v22.3.22-cur, done by cs@nop.
+-;-;-;2022-03-22 05:40:18, took 00:07:09, with 100 workers, on 2780 cases, 0 failed, 0 traces, 6 retries
 -;-;-;./rtr.bin
 http://sources.freertr.net/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.freertr.net/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
