@@ -10,8 +10,8 @@
  :active { color: white }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v22.3.21-cur, done by cs@nop.<br/>
-tested: 2022-03-21 23:26:33, took 00:07:15, with 100 workers, on 2780 cases, 0 failed, 1 traces, 4 retries<br/>
+release: freeRouter v22.3.22-cur, done by cs@nop.<br/>
+tested: 2022-03-22 05:40:18, took 00:07:09, with 100 workers, on 2780 cases, 0 failed, 0 traces, 6 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
